# gs-index

./: Cargo.toml  README.md
src/: event_handling.rs  event_log.rs  event_source.rs  indexer.rs  main.rs
src/snapshots/: gs_index__indexer__tests__project_created.snap  gs_index__indexer__tests__project_created_and_metadata_updated.snap
