[package]
name = "gs-index"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] } 
ethers = { version = "2.0.1", default-features = false, features = ["abigen", "ethers-solc", "eip712", "rustls", "legacy"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.193"
reqwest = { version = "0.11.22", features = [ "blocking" ] }
futures = "0.3.29"
sea-query = { version = "0.30.4", features = [ "with-json" ] }
tokio-postgres = "0.7.10"
async-stream = "0.3.5"
serde_json = "1.0.108"
tempfile = "3.8.1"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
